<resources>
    <string name="app_name">Ouick Quiz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User Name</string>
    <string name="student_id">Student Id</string>
    <string name="batch_number">Batch Number</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg">Register</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="department_name">Department Name</string>
    <string name="user_name_or_email">User Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="next">Next</string>
    <string name="previous">PREVIOUS</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_id_et">Email Id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nanan">NANANA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_hhhhhhhh">HHHHHHHH</string>
    <string name="title_activity_result">ResultActivity</string>
</resources>
