<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="1dp"

    tools:context="com.onlinect.sujit007.onlinect.RegistationActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:padding="5dp"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--userName-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <!--StudentId-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_id"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!--BatchNumber-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_student_batch_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/batch_number"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/department_name"
                android:textColor="@color/colorAccent" />


            <!--Department-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/department_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/spinnerBack"
                    android:spinnerMode="dialog" />

            </android.support.design.widget.TextInputLayout>

            <!--mobile Number-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"

                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!--Email Id-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!--passWord-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!--Confirm Password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Done"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <!--Buttons-->


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel_registration"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:background="@color/colorPrimary"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <Button
            android:id="@+id/agree_registration"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:layout_weight=".5"
            android:background="@color/colorPrimary"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>
